# gjs

./: .gitignore  README.md  min-install.sh  pom.xml
eclipse/: lifeCycleMapping.xml
gjs-archetypes/: pom.xml
gjs-archetypes/gjs-archetype-archetype/: README.md  changelog.md  pom.xml
gjs-archetypes/gjs-archetype-parent/: pom.xml
gjs-archetypes/gjs-c-exe-archetype/: pom.xml
gjs-archetypes/gjs-c-lib-archetype/: pom.xml
gjs-archetypes/gjs-c-stlib-archetype/: README.md  changelog.md  pom.xml
gjs-archetypes/gjs-cpp-exe-archetype/: README.md  changelog.md  pom.xml
gjs-archetypes/gjs-cpp-lib-archetype/: README.md  changelog.md  pom.xml
gjs-archetypes/gjs-cpp-stlib-archetype/: pom.xml
gjs-archetypes/gjs-extension-archetype/: README.md  pom.xml
gjs-archetypes/gjs-java-artifact-archetype/: README.md  changelog.md  pom.xml
gjs-archetypes/gjs-java-back-archetype/: pom.xml
gjs-archetypes/gjs-java-exe-archetype/: README.md  pom.xml
gjs-archetypes/gjs-java-lib-archetype/: README.md  pom.xml
gjs-archetypes/gjs-java-module-archetype/: README.md  changelog.md  (+1 more)
gjs-archetypes/gjs-python-exe-archetype/src/main/resources/archetype-resources/: pom.xml  pyproject.toml
gjs-archetypes/gjs-python-exe-archetype/src/main/resources/archetype-resources/src/main/python/: Main.py
gjs-archetypes/gjs-python-exe-archetype/src/main/resources/archetype-resources/src/test/python/: SampleTypeTest.py
gjs-c/: pom.xml
gjs-java/: pom.xml
gjs-maven/: pom.xml
gjs-no-java-parent/: pom.xml
gjs-npm/: pom.xml
gjs-parent/: pom.xml
gjs-plugin/: pom.xml
gjs-python/: pom.xml
(+2333 files in other folders)
