#set( $symbol_pound = '#' )
#set( $symbol_dollar = '$' )
#set( $symbol_escape = '\' )
#set( $capitalizedName = $shortName.substring(0,1).toUpperCase() + $shortName.substring(1))
#set( $packagePath = ${package.replaceAll("\.","/")})
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
testpaths = ["src/test/python/${packagePath}"]
pythonpath  = [
    "src/main/python/${packagePath}",
    "src/test/python/${packagePath}",
]

python_files = ["*Test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

cache_dir = "target/test-classes/.pytest_cache"